0.1.5 - 2008-01-25
* Fixed Room#listen, which was broken by latest Campfire deploy
* Fixed timeout when listening but not speaking that will eventually log you out [Clinton R. Nixon]

0.1.4 - 2007-07-23
* Support for transcripts
* Fixed Room#leave, which was broken by a Campfire deployment [Andy Smith]

0.1.3 - 2007-02-12
* added ssl support [Tero Parviainen]

0.1.2 - 2007-01-27
* fixed bug preventing #listen from working without a block

0.1.1 - 2007-01-27
* fix bug preventing speak from working
* incorporated "watching" from http://soylentfoo.jnewland.com/articles/2006/12/07/updates-to-marshmallow-the-campfire-bot

0.1.0 - 2007-01-23
* Initial release as gem
* Get the users in a room [Tero Parviainen]