@@ -1,3 +1,6 @@
+TRUNK
+* Added Room#topic for getting the current topic [Even Weaver]
+
 0.1.5 - 2008-01-25
 * Fixed Room#listen, which was broken by latest Campfire deploy
 * Fixed timeout when listening but not speaking that will eventually log you out [Clinton R. Nixon]
